Fix overlapping elements in add member form

--- a/app/assets/stylesheets/_misc_legacy.sass
+++ b/app/assets/stylesheets/_misc_legacy.sass
@@ -609,24 +609,39 @@ a.impaired--empty-link,
 #members_add_form
   .-flex
     display: flex
-    align-items: center
+    align-items: flex-end
+
+    .form--field,
+    #member-add-submit-button--container
+      margin-bottom: 1px
+      flex-basis: 50%
 
   // Override default margin to allow correct vertical alignment
   #add-member--submit-button
-    // workaround to put the button next to the select box
-    flex-basis: 100%
-    margin-right: 65%
-
     margin-bottom: 0
     margin-left: 1rem
-    margin-top: 0.5rem
     // Neccessary so that button and select box have the same height
     line-height: 0.6rem
 
 @include breakpoint(680px down)
-  #members_add_form
-    .-flex
-      align-items: flex-start
+  #members_add_form .-flex
+    align-items: flex-start
+
+    &.-with-button
       flex-direction: column
+      // Workaround for safari and IE
+      // They are not able to get the correct height with flex-direction: column
+      height: 120px
+
     #add-member--submit-button
       margin-left: 0
+    .form--field
+      margin-bottom: 1rem
+
+@media screen and (max-width: 970px) and (min-width: 681px)
+  #members_add_form .-flex.-with-button
+    .form--field
+      max-width: 50%
+      select
+        max-width: 66%
+
