--- a/app/assets/stylesheets/content/_forms.sass
+++ b/app/assets/stylesheets/content/_forms.sass
@@ -68,7 +68,7 @@ $form--field-types: (text-field, text-area, select, check-box, radio-button, ran
       padding: 10px 20px 0 20px
 
     &.-medium-compressed
-      padding: 20px 20px 10px 20px
+      padding: 10px 20px 20px 20px
 
   &.danger-zone
     border: 1px solid $content-form-danger-zone-bg-color
